todo menos rutas (PFFFFFFFFFFFFFF)

--- a/uimodule/webapp/i18n/i18n.properties
+++ b/uimodule/webapp/i18n/i18n.properties
@@ -1,3 +1,6 @@
 title=com.YPF.mapApp
 appTitle=com.YPF.mapApp
 appDescription=App Description
+EnterPlace=Enter Place
+EnterFrom=Enter From
+EnterTo=Enter To
