dolor absoluto y total

--- a/uimodule/webapp/i18n/i18n.properties
+++ b/uimodule/webapp/i18n/i18n.properties
@@ -4,3 +4,14 @@ appDescription=App Description
 EnterPlace=Enter Place
 EnterFrom=Enter From
 EnterTo=Enter To
+masterTitle=Listado de Rutas
+masterLabelSubtitle=masterLabelSubtitle
+masterPage=Listado de Rutas
+idRoute=Id de Ruta
+routeFrom=From
+routeTo=To
+routeDriver=Driver
+routeVehicleId=Vehicle
+routeStatus=Status
+routeDetailBtnBack=Back
+routeDetailTitle=Detalle de Ruta
